@@ -2,7 +2,7 @@
  * Test suite for errors returned by the server.
  *
  * Written by Russ Allbery <eagle@eyrie.org>
- * Copyright 2006, 2007, 2009, 2010, 2012
+ * Copyright 2006, 2007, 2009, 2010, 2012, 2014
  *     The Board of Trustees of the Leland Stanford Junior University
  *
  * See LICENSE for licensing terms.
@@ -69,7 +69,7 @@ test_excess_args(struct remctl *r)
     const char **command;
     size_t i;
 
-    command = bmalloc((10 * 1024 + 3) * sizeof(const char *));
+    command = bcalloc(10 * 1024 + 3, sizeof(const char *));
     command[0] = "test";
     command[1] = "echo";
     for (i = 2; i < (10 * 1024) + 2; i++)
